se ajustó la separación de géneros de la tabla movies

--- a/Preprocesamiento.ipynb
+++ b/Preprocesamiento.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3Y8EMVzZA6gmiRGH5E8lz",
+      "authorship_tag": "ABX9TyP32q4tVio+2qE4HRdRsP34",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,30 +42,25 @@
         "# Importar bibliotecas\n",
         "import sqlite3\n",
         "from sqlalchemy import create_engine\n",
-        "import pandas as pd"
+        "import pandas as pd\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "V0o615IrEUoi",
-        "outputId": "a9dcd2f1-ea2c-4572-97a2-e3c3b1ab6917"
+        "outputId": "0c9498ee-c071-4a18-b55a-2156263822e1"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.6 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.1/1.6 MB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m22.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: sqlalchemy in /usr/local/lib/python3.10/dist-packages (2.0.29)\n",
+            "Requirement already satisfied: sqlalchemy in /usr/local/lib/python3.10/dist-packages (2.0.29)\n",
             "Requirement already satisfied: typing-extensions>=4.6.0 in /usr/local/lib/python3.10/dist-packages (from sqlalchemy) (4.10.0)\n",
             "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.10/dist-packages (from sqlalchemy) (3.0.3)\n",
-            "Collecting mysql-connector-python\n",
-            "  Downloading mysql_connector_python-8.3.0-cp310-cp310-manylinux_2_17_x86_64.whl (21.5 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.5/21.5 MB\u001b[0m \u001b[31m59.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: mysql-connector-python\n",
-            "Successfully installed mysql-connector-python-8.3.0\n"
+            "Requirement already satisfied: mysql-connector-python in /usr/local/lib/python3.10/dist-packages (8.3.0)\n"
           ]
         }
       ]
@@ -81,7 +76,7 @@
       "metadata": {
         "id": "EUAoeyyoEYm5"
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -107,12 +102,12 @@
       ],
       "metadata": {
         "id": "H4RnSuqGghr5",
-        "outputId": "555bf119-e424-42d3-873d-77e2b1895a52",
+        "outputId": "57a5f0f3-2a38-496e-e1d5-7beb194d1a37",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +122,8 @@
             "Tipos de datos de las columnas en la tabla 'movies':\n",
             "movieId: INTEGER\n",
             "title: TEXT\n",
-            "genres: TEXT\n"
+            "genres: TEXT\n",
+            "year: INTEGER\n"
           ]
         }
       ]
@@ -141,8 +137,13 @@
         "conn = sqlite3.connect('db_movies')\n",
         "cursor = conn.cursor()\n",
         "\n",
-        "# Agregar una nueva columna para almacenar el año\n",
-        "cursor.execute(\"ALTER TABLE movies ADD COLUMN year INTEGER\")\n",
+        "# Verificar si la columna 'year' ya existe en la tabla 'movies'\n",
+        "cursor.execute(\"PRAGMA table_info(movies)\")\n",
+        "columns = cursor.fetchall()\n",
+        "column_names = [col[1] for col in columns]\n",
+        "if 'year' not in column_names:\n",
+        "    # Si no existe, agregar la nueva columna\n",
+        "    cursor.execute(\"ALTER TABLE movies ADD COLUMN year INTEGER\")\n",
         "\n",
         "# Actualizar la nueva columna con el año extraído del título de la película\n",
         "cursor.execute(\"\"\"\n",
@@ -157,7 +158,7 @@
       "metadata": {
         "id": "vLPXhC7tnNxM"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -174,18 +175,16 @@
         "\n",
         "# Imprimir el nombre de la columna y su tipo de datos\n",
         "for column in columns_FR:\n",
-        "    print(column[1], \"-\", column[2])\n",
-        "\n",
-        "conn.close()"
+        "    print(column[1], \"-\", column[2])"
       ],
       "metadata": {
         "id": "4ZNzfQt2oamk",
-        "outputId": "eed171df-dc0d-4b23-e742-0b52ad4dd041",
+        "outputId": "818a1578-da6c-49c0-c88c-7cde82050147",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,25 +201,26 @@
     {
       "cell_type": "code",
       "source": [
-        "# verificamos el contenido de las primeras filas de la tabla movies\n",
-        "conn = sqlite3.connect('db_movies')\n",
+        "# Leer los datos de la tabla 'movies' en un DataFrame\n",
+        "movies = pd.read_sql('SELECT * FROM movies', conn)\n",
         "\n",
-        "query = \"SELECT * FROM movies LIMIT 5\"\n",
+        "# Separar los géneros en la columna 'genres' usando el delimitador '|'\n",
+        "movies['genre_list'] = movies['genres'].apply(lambda x: x.split('|'))\n",
         "\n",
-        "# Ejecutar la consulta y cargar los resultados en un DataFrame de Pandas\n",
-        "movies = pd.read_sql(query, conn)\n",
+        "# Mostrar las primeras filas del DataFrame para verificar que se hayan agregado correctamente\n",
+        "print(movies.head())\n",
         "\n",
-        "# Mostrar las primeras filas del DataFrame\n",
-        "print(movies)"
+        "# Cerrar la conexión a la base de datos\n",
+        "conn.close()"
       ],
       "metadata": {
-        "id": "XBMSMZKIpABZ",
-        "outputId": "32aa2543-374c-4254-df70-8ec4a0ec1490",
+        "id": "cQCJ_7szlqJu",
+        "outputId": "73f5fcdf-0ea5-422c-ab4c-441407540140",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,12 +233,19 @@
             "3        4            Waiting to Exhale (1995)   \n",
             "4        5  Father of the Bride Part II (1995)   \n",
             "\n",
-            "                                        genres  year  \n",
-            "0  Adventure|Animation|Children|Comedy|Fantasy  1995  \n",
-            "1                   Adventure|Children|Fantasy  1995  \n",
-            "2                               Comedy|Romance  1995  \n",
-            "3                         Comedy|Drama|Romance  1995  \n",
-            "4                                       Comedy  1995  \n"
+            "                                        genres  year  \\\n",
+            "0  Adventure|Animation|Children|Comedy|Fantasy  1995   \n",
+            "1                   Adventure|Children|Fantasy  1995   \n",
+            "2                               Comedy|Romance  1995   \n",
+            "3                         Comedy|Drama|Romance  1995   \n",
+            "4                                       Comedy  1995   \n",
+            "\n",
+            "                                          genre_list  \n",
+            "0  [Adventure, Animation, Children, Comedy, Fantasy]  \n",
+            "1                     [Adventure, Children, Fantasy]  \n",
+            "2                                  [Comedy, Romance]  \n",
+            "3                           [Comedy, Drama, Romance]  \n",
+            "4                                           [Comedy]  \n"
           ]
         }
       ]
@@ -259,12 +266,12 @@
       ],
       "metadata": {
         "id": "qpGhDr2ZTrdh",
-        "outputId": "4694ebbc-4150-4593-9da5-be186eb80e09",
+        "outputId": "43a3c7e8-53ad-4c05-f3e9-cf95dc49f7ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +309,7 @@
       "metadata": {
         "id": "8ZkUqUGXDK7R"
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -331,7 +338,7 @@
       "metadata": {
         "id": "vYY1g_MjFvN9"
       },
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -358,7 +365,7 @@
       "metadata": {
         "id": "77ryWF1UGbX5"
       },
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -390,18 +397,18 @@
       "metadata": {
         "id": "fEcmfPLfjKme"
       },
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7GVBstjRCvnL",
-        "outputId": "cc7be61e-e5ac-4078-a25d-f571ba0a32e2"
+        "outputId": "56bfc264-f618-4a4c-a3cf-5cc048889b85"
       },
       "outputs": [
         {
@@ -457,12 +464,12 @@
       ],
       "metadata": {
         "id": "FOLmlkADlb_c",
-        "outputId": "9d998ae9-ea42-4d40-a6a4-e8bdeda6043c",
+        "outputId": "070ca2d6-4c12-4da8-9d7c-59b16c277daf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,9 +523,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d-n-CdNLKRCY",
-        "outputId": "c54c7042-ab90-4e0c-a42b-f05ce902bb12"
+        "outputId": "4ee1f679-dba0-45e6-882b-2cd3f96e01bd"
       },
-      "execution_count": 18,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,9 +559,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ff9jWWq8KeAo",
-        "outputId": "4da90e4a-289e-4f16-a026-fe2298cb38bb"
+        "outputId": "96cd164d-b820-4e48-e2b7-d0fb6eaf443b"
       },
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
