--- a/Preprocesamiento.ipynb
+++ b/Preprocesamiento.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP32q4tVio+2qE4HRdRsP34",
+      "mount_file_id": "https://github.com/veronica1908/MARKETING_E2_A_III/blob/main/Preprocesamiento.ipynb",
+      "authorship_tag": "ABX9TyN4gMVqwzXIYNQtzq7owH7X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,14 +50,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V0o615IrEUoi",
-        "outputId": "0c9498ee-c071-4a18-b55a-2156263822e1"
+        "outputId": "69a4d83d-1a1f-476a-9cc3-2085fc27492c"
       },
-      "execution_count": 1,
+      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
+            "The sql extension is already loaded. To reload it, use:\n",
+            "  %reload_ext sql\n",
             "Requirement already satisfied: sqlalchemy in /usr/local/lib/python3.10/dist-packages (2.0.29)\n",
             "Requirement already satisfied: typing-extensions>=4.6.0 in /usr/local/lib/python3.10/dist-packages (from sqlalchemy) (4.10.0)\n",
             "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.10/dist-packages (from sqlalchemy) (3.0.3)\n",
@@ -76,7 +82,7 @@
       "metadata": {
         "id": "EUAoeyyoEYm5"
       },
-      "execution_count": 2,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -102,12 +108,12 @@
       ],
       "metadata": {
         "id": "H4RnSuqGghr5",
-        "outputId": "57a5f0f3-2a38-496e-e1d5-7beb194d1a37",
+        "outputId": "4ea247ae-46e4-4e59-bbbc-ec78ea336e49",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,11 +128,19 @@
             "Tipos de datos de las columnas en la tabla 'movies':\n",
             "movieId: INTEGER\n",
             "title: TEXT\n",
-            "genres: TEXT\n",
-            "year: INTEGER\n"
+            "genres: TEXT\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Ajustes tabla movies"
+      ],
+      "metadata": {
+        "id": "wrsXihUA3VZZ"
+      }
     },
     {
       "cell_type": "code",
@@ -158,33 +172,36 @@
       "metadata": {
         "id": "vLPXhC7tnNxM"
       },
-      "execution_count": 4,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#Verificamos las columnas de la tabla 'movies'\n",
-        "\n",
         "conn = sqlite3.connect('db_movies')\n",
         "cursor = conn.cursor()\n",
         "\n",
+        "# Verificar las columnas de la tabla 'movies'\n",
+        "\n",
         "# Obtener información sobre las columnas de la tabla 'movies'\n",
         "cursor.execute(\"PRAGMA table_info(movies)\")\n",
-        "columns_FR = cursor.fetchall()\n",
+        "columns_info = cursor.fetchall()\n",
         "\n",
         "# Imprimir el nombre de la columna y su tipo de datos\n",
-        "for column in columns_FR:\n",
-        "    print(column[1], \"-\", column[2])"
+        "for column in columns_info:\n",
+        "    print(column[1], \"-\", column[2])\n",
+        "\n",
+        "# Cerrar la conexión a la base de datos\n",
+        "conn.close()"
       ],
       "metadata": {
         "id": "4ZNzfQt2oamk",
-        "outputId": "818a1578-da6c-49c0-c88c-7cde82050147",
+        "outputId": "92431d13-346c-47dc-f3d7-ced8c55e6a75",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,54 +218,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# Leer los datos de la tabla 'movies' en un DataFrame\n",
-        "movies = pd.read_sql('SELECT * FROM movies', conn)\n",
-        "\n",
-        "# Separar los géneros en la columna 'genres' usando el delimitador '|'\n",
-        "movies['genre_list'] = movies['genres'].apply(lambda x: x.split('|'))\n",
-        "\n",
-        "# Mostrar las primeras filas del DataFrame para verificar que se hayan agregado correctamente\n",
-        "print(movies.head())\n",
-        "\n",
-        "# Cerrar la conexión a la base de datos\n",
-        "conn.close()"
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "cQCJ_7szlqJu",
-        "outputId": "73f5fcdf-0ea5-422c-ab4c-441407540140",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "2OmaSv9F6Wwh"
       },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "   movieId                               title  \\\n",
-            "0        1                    Toy Story (1995)   \n",
-            "1        2                      Jumanji (1995)   \n",
-            "2        3             Grumpier Old Men (1995)   \n",
-            "3        4            Waiting to Exhale (1995)   \n",
-            "4        5  Father of the Bride Part II (1995)   \n",
-            "\n",
-            "                                        genres  year  \\\n",
-            "0  Adventure|Animation|Children|Comedy|Fantasy  1995   \n",
-            "1                   Adventure|Children|Fantasy  1995   \n",
-            "2                               Comedy|Romance  1995   \n",
-            "3                         Comedy|Drama|Romance  1995   \n",
-            "4                                       Comedy  1995   \n",
-            "\n",
-            "                                          genre_list  \n",
-            "0  [Adventure, Animation, Children, Comedy, Fantasy]  \n",
-            "1                     [Adventure, Children, Fantasy]  \n",
-            "2                                  [Comedy, Romance]  \n",
-            "3                           [Comedy, Drama, Romance]  \n",
-            "4                                           [Comedy]  \n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Ajustes en la tabla ratings"
+      ],
+      "metadata": {
+        "id": "97eY5pJP3bQg"
+      }
     },
     {
       "cell_type": "code",
@@ -262,54 +248,57 @@
         "ratings = pd.read_sql(query, conn)\n",
         "\n",
         "# Mostrar las primeras filas del DataFrame\n",
-        "print(ratings)"
+        "print(ratings)\n",
+        "conn.close()"
       ],
       "metadata": {
-        "id": "qpGhDr2ZTrdh",
-        "outputId": "43a3c7e8-53ad-4c05-f3e9-cf95dc49f7ec",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "qpGhDr2ZTrdh"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "   userId  movieId  rating  timestamp\n",
-            "0       1        1     4.0  964982703\n",
-            "1       1        3     4.0  964981247\n",
-            "2       1        6     4.0  964982224\n",
-            "3       1       47     5.0  964983815\n",
-            "4       1       50     5.0  964982931\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Creación de nuevas tablas"
+      ],
+      "metadata": {
+        "id": "Bv6STEq93kfY"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "# Crear tabla con usuarios con más de 50 películas vistas y menos de 1000\n",
+        "conn = sqlite3.connect('db_movies')\n",
+        "\n",
+        "# Crear tabla con usuarios con más de 50 películas vistas\n",
         "query = \"\"\"\n",
         "    DROP TABLE IF EXISTS usuarios_sel;\n",
         "    CREATE TABLE usuarios_sel AS\n",
         "    SELECT \"userId\" AS user_id, COUNT(*) AS cnt_rat\n",
         "    FROM ratings\n",
         "    GROUP BY \"userId\"\n",
-        "    HAVING cnt_rat > 50 AND cnt_rat <= 1000\n",
+        "    HAVING cnt_rat > 50\n",
         "    ORDER BY cnt_rat DESC;\n",
         "\"\"\"\n",
         "\n",
         "# Ejecutar la consulta\n",
         "conn.executescript(query)\n",
-        "# Cerrar la conexión\n",
+        "\n",
+        "conn = sqlite3.connect('db_movies')\n",
+        "query = \"SELECT * FROM usuarios_sel LIMIT 5\"\n",
+        "# Ejecutar la consulta y cargar los resultados en un DataFrame de Pandas\n",
+        "usuarios_sel = pd.read_sql(query, conn)\n",
+        "\n",
+        "# Mostrar las primeras filas del DataFrame\n",
+        "print(usuarios_sel)\n",
+        "\n",
         "conn.close()"
       ],
       "metadata": {
         "id": "8ZkUqUGXDK7R"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -332,13 +321,22 @@
         "\n",
         "# Ejecutar la consulta\n",
         "conn.executescript(query)\n",
+        "conn.close()\n",
+        "\n",
+        "conn = sqlite3.connect('db_movies')\n",
+        "query = \"SELECT * FROM movies_sel LIMIT 5\"\n",
+        "# Ejecutar la consulta y cargar los resultados en un DataFrame de Pandas\n",
+        "movies_sel = pd.read_sql(query, conn)\n",
+        "\n",
+        "# Mostrar las primeras filas del DataFrame\n",
+        "print(movies_sel)\n",
         "\n",
         "conn.close()"
       ],
       "metadata": {
         "id": "vYY1g_MjFvN9"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -360,12 +358,21 @@
         "INNER JOIN usuarios_sel c ON a.\"userId\" = c.user_id;\n",
         "\"\"\"\n",
         "conn.executescript(query)\n",
+        "conn.close()\n",
+        "\n",
+        "conn = sqlite3.connect('db_movies')\n",
+        "query = \"SELECT * FROM ratings_final LIMIT 5\"\n",
+        "# Ejecutar la consulta y cargar los resultados en un DataFrame de Pandas\n",
+        "ratings_final = pd.read_sql(query, conn)\n",
+        "\n",
+        "# Mostrar las primeras filas del DataFrame\n",
+        "print(ratings_final)\n",
         "conn.close()"
       ],
       "metadata": {
         "id": "77ryWF1UGbX5"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -382,7 +389,7 @@
         "CREATE TABLE movies_final AS\n",
         "SELECT a.movieId AS movie_id,\n",
         "       a.title AS movie_title,\n",
-        "       a.genres AS genres,\n",
+        "       a.genres,\n",
         "       a.year\n",
         "FROM movies a\n",
         "INNER JOIN movies_sel c ON a.movieId = c.movieId;\n",
@@ -392,61 +399,22 @@
         "conn.executescript(query)\n",
         "\n",
         "# Cerrar la conexión a la base de datos\n",
+        "conn.close()\n",
+        "\n",
+        "conn = sqlite3.connect('db_movies')\n",
+        "query = \"SELECT * FROM movies_final LIMIT 5\"\n",
+        "# Ejecutar la consulta y cargar los resultados en un DataFrame de Pandas\n",
+        "movies_final = pd.read_sql(query, conn)\n",
+        "\n",
+        "# Mostrar las primeras filas del DataFrame\n",
+        "print(movies_final)\n",
         "conn.close()"
       ],
       "metadata": {
         "id": "fEcmfPLfjKme"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7GVBstjRCvnL",
-        "outputId": "56bfc264-f618-4a4c-a3cf-5cc048889b85"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Tabla 'full_ratings' creada con éxito.\n"
-          ]
-        }
-      ],
-      "source": [
-        "conn = sqlite3.connect('db_movies')\n",
-        "cursor = conn.cursor()\n",
-        "\n",
-        "# Script SQL\n",
-        "script = \"\"\"\n",
-        "DROP TABLE IF EXISTS full_ratings;\n",
-        "\n",
-        "CREATE TABLE full_ratings AS\n",
-        "SELECT a.*,\n",
-        "       c.movie_title,\n",
-        "       c.genres,\n",
-        "       c. year\n",
-        "FROM ratings_final a\n",
-        "INNER JOIN movies_final c ON a.movie_id = c.movie_id;\n",
-        "\"\"\"\n",
-        "\n",
-        "# Ejecutar el script SQL\n",
-        "conn.executescript(script)\n",
-        "\n",
-        "# Confirmar los cambios y cerrar la conexión\n",
-        "conn.commit()\n",
-        "conn.close()\n",
-        "\n",
-        "print(\"Tabla 'full_ratings' creada con éxito.\")\n",
-        "\n",
-        "conn.close()"
-      ]
     },
     {
       "cell_type": "code",
@@ -463,34 +431,10 @@
         "print(full_ratings)"
       ],
       "metadata": {
-        "id": "FOLmlkADlb_c",
-        "outputId": "070ca2d6-4c12-4da8-9d7c-59b16c277daf",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "FOLmlkADlb_c"
       },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "   user_id  movie_id  rating                  movie_title  \\\n",
-            "0        1         1     4.0             Toy Story (1995)   \n",
-            "1        1         3     4.0      Grumpier Old Men (1995)   \n",
-            "2        1         6     4.0                  Heat (1995)   \n",
-            "3        1        47     5.0  Seven (a.k.a. Se7en) (1995)   \n",
-            "4        1        50     5.0   Usual Suspects, The (1995)   \n",
-            "\n",
-            "                                        genres  year  \n",
-            "0  Adventure|Animation|Children|Comedy|Fantasy  1995  \n",
-            "1                               Comedy|Romance  1995  \n",
-            "2                        Action|Crime|Thriller  1995  \n",
-            "3                             Mystery|Thriller  1995  \n",
-            "4                       Crime|Mystery|Thriller  1995  \n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -519,22 +463,10 @@
         "conn.close()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "d-n-CdNLKRCY",
-        "outputId": "4ee1f679-dba0-45e6-882b-2cd3f96e01bd"
+        "id": "d-n-CdNLKRCY"
       },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "La tabla 'full_ratings' se ha exportado como full_ratings.csv\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -555,28 +487,10 @@
         "    print(table[0])"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ff9jWWq8KeAo",
-        "outputId": "96cd164d-b820-4e48-e2b7-d0fb6eaf443b"
+        "id": "ff9jWWq8KeAo"
       },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "ratings\n",
-            "movies\n",
-            "usuarios_sel\n",
-            "movies_sel\n",
-            "ratings_final\n",
-            "movies_final\n",
-            "full_ratings\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
