--- a/Preprocesamiento.ipynb
+++ b/Preprocesamiento.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/veronica1908/MARKETING_E2_A_III/blob/main/Preprocesamiento.ipynb",
-      "authorship_tag": "ABX9TyN4gMVqwzXIYNQtzq7owH7X",
+      "authorship_tag": "ABX9TyPDu9aeJMPTsgAUrDMuDKhs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,19 +50,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V0o615IrEUoi",
-        "outputId": "69a4d83d-1a1f-476a-9cc3-2085fc27492c"
+        "outputId": "b9d6ca0d-905f-4a71-c302-7d4d8a08445e"
       },
-      "execution_count": 15,
+      "execution_count": 1,
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "The sql extension is already loaded. To reload it, use:\n",
-            "  %reload_ext sql\n",
             "Requirement already satisfied: sqlalchemy in /usr/local/lib/python3.10/dist-packages (2.0.29)\n",
             "Requirement already satisfied: typing-extensions>=4.6.0 in /usr/local/lib/python3.10/dist-packages (from sqlalchemy) (4.10.0)\n",
             "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.10/dist-packages (from sqlalchemy) (3.0.3)\n",
@@ -82,7 +77,7 @@
       "metadata": {
         "id": "EUAoeyyoEYm5"
       },
-      "execution_count": 16,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -108,12 +103,12 @@
       ],
       "metadata": {
         "id": "H4RnSuqGghr5",
-        "outputId": "4ea247ae-46e4-4e59-bbbc-ec78ea336e49",
+        "outputId": "1a0392fa-22d5-4ca9-ae5b-19b3cf3cfa42",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +123,8 @@
             "Tipos de datos de las columnas en la tabla 'movies':\n",
             "movieId: INTEGER\n",
             "title: TEXT\n",
-            "genres: TEXT\n"
+            "genres: TEXT\n",
+            "year: INTEGER\n"
           ]
         }
       ]
@@ -172,7 +168,7 @@
       "metadata": {
         "id": "vLPXhC7tnNxM"
       },
-      "execution_count": 18,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -196,12 +192,12 @@
       ],
       "metadata": {
         "id": "4ZNzfQt2oamk",
-        "outputId": "92431d13-346c-47dc-f3d7-ced8c55e6a75",
+        "outputId": "a85b471a-eef0-45b2-df8f-b893a1178d4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,10 +218,22 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "2OmaSv9F6Wwh"
+        "id": "2OmaSv9F6Wwh",
+        "outputId": "a6a88055-1b7c-48c5-ecd4-90c4a616413c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -252,10 +260,27 @@
         "conn.close()"
       ],
       "metadata": {
-        "id": "qpGhDr2ZTrdh"
+        "id": "qpGhDr2ZTrdh",
+        "outputId": "31aafdde-cd2c-49b0-d398-984cf23af1f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   userId  movieId  rating  timestamp\n",
+            "0       1        1     4.0  964982703\n",
+            "1       1        3     4.0  964981247\n",
+            "2       1        6     4.0  964982224\n",
+            "3       1       47     5.0  964983815\n",
+            "4       1       50     5.0  964982931\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -296,10 +321,27 @@
         "conn.close()"
       ],
       "metadata": {
-        "id": "8ZkUqUGXDK7R"
+        "id": "8ZkUqUGXDK7R",
+        "outputId": "c6eaeae9-7e76-4be9-ebc2-e8530dddf4d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   user_id  cnt_rat\n",
+            "0      414     2698\n",
+            "1      599     2478\n",
+            "2      474     2108\n",
+            "3      448     1864\n",
+            "4      274     1346\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -334,10 +376,27 @@
         "conn.close()"
       ],
       "metadata": {
-        "id": "vYY1g_MjFvN9"
+        "id": "vYY1g_MjFvN9",
+        "outputId": "67790414-e10d-4dbf-a60c-f10971c29dba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   movieId  cnt_rat\n",
+            "0      356      329\n",
+            "1      318      317\n",
+            "2      296      307\n",
+            "3      593      279\n",
+            "4     2571      278\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -370,10 +429,27 @@
         "conn.close()"
       ],
       "metadata": {
-        "id": "77ryWF1UGbX5"
+        "id": "77ryWF1UGbX5",
+        "outputId": "41e8f343-0e67-4b84-a6ed-18df5ffbd21b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   user_id  movie_id  rating\n",
+            "0        1         1     4.0\n",
+            "1        1         3     4.0\n",
+            "2        1         6     4.0\n",
+            "3        1        47     5.0\n",
+            "4        1        50     5.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -411,10 +487,80 @@
         "conn.close()"
       ],
       "metadata": {
-        "id": "fEcmfPLfjKme"
+        "id": "fEcmfPLfjKme",
+        "outputId": "3dde9d9e-b837-4a89-902d-7de66674d224",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   movie_id              movie_title  \\\n",
+            "0         1         Toy Story (1995)   \n",
+            "1         2           Jumanji (1995)   \n",
+            "2         3  Grumpier Old Men (1995)   \n",
+            "3         6              Heat (1995)   \n",
+            "4         7           Sabrina (1995)   \n",
+            "\n",
+            "                                        genres  year  \n",
+            "0  Adventure|Animation|Children|Comedy|Fantasy  1995  \n",
+            "1                   Adventure|Children|Fantasy  1995  \n",
+            "2                               Comedy|Romance  1995  \n",
+            "3                        Action|Crime|Thriller  1995  \n",
+            "4                               Comedy|Romance  1995  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Conectarse a la base de datos\n",
+        "conn = sqlite3.connect('db_movies')\n",
+        "cursor = conn.cursor()\n",
+        "\n",
+        "# Script SQL\n",
+        "script = \"\"\"\n",
+        "DROP TABLE IF EXISTS full_ratings;\n",
+        "\n",
+        "CREATE TABLE full_ratings AS\n",
+        "SELECT a.*,\n",
+        "       c.movie_title,\n",
+        "       c.genres\n",
+        "FROM ratings_final a\n",
+        "INNER JOIN movies_final c ON a.movie_id = c.movie_id;\n",
+        "\"\"\"\n",
+        "\n",
+        "# Ejecutar el script SQL\n",
+        "cursor.executescript(script)\n",
+        "\n",
+        "# Confirmar los cambios y cerrar la conexión\n",
+        "conn.commit()\n",
+        "conn.close()\n",
+        "\n",
+        "print(\"Tabla 'full_ratings' creada con éxito.\")"
+      ],
+      "metadata": {
+        "id": "RCnWmZMa8gN7",
+        "outputId": "2c86495f-9d7b-46b7-c55f-2b6d930ca213",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tabla 'full_ratings' creada con éxito.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -422,7 +568,7 @@
         "# Consulta SQL para seleccionar las primeras filas de la tabla full_ratings\n",
         "conn = sqlite3.connect('db_movies')\n",
         "\n",
-        "query = \"SELECT * FROM full_ratings LIMIT 5\"  # Cambia el número de filas según tus necesidades\n",
+        "query = \"SELECT * FROM full_ratings LIMIT 5\"\n",
         "\n",
         "# Ejecutar la consulta y cargar los resultados en un DataFrame de Pandas\n",
         "full_ratings = pd.read_sql(query, conn)\n",
@@ -431,10 +577,34 @@
         "print(full_ratings)"
       ],
       "metadata": {
-        "id": "FOLmlkADlb_c"
+        "id": "J01ihBJ571xc",
+        "outputId": "5cec3304-f5a7-4a26-c496-19e2d95130e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   user_id  movie_id  rating                  movie_title  \\\n",
+            "0        1         1     4.0             Toy Story (1995)   \n",
+            "1        1         3     4.0      Grumpier Old Men (1995)   \n",
+            "2        1         6     4.0                  Heat (1995)   \n",
+            "3        1        47     5.0  Seven (a.k.a. Se7en) (1995)   \n",
+            "4        1        50     5.0   Usual Suspects, The (1995)   \n",
+            "\n",
+            "                                        genres  \n",
+            "0  Adventure|Animation|Children|Comedy|Fantasy  \n",
+            "1                               Comedy|Romance  \n",
+            "2                        Action|Crime|Thriller  \n",
+            "3                             Mystery|Thriller  \n",
+            "4                       Crime|Mystery|Thriller  \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -463,10 +633,22 @@
         "conn.close()"
       ],
       "metadata": {
-        "id": "d-n-CdNLKRCY"
+        "id": "d-n-CdNLKRCY",
+        "outputId": "da3e6fff-9ce9-426e-c527-43fa04e5d660",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La tabla 'full_ratings' se ha exportado como full_ratings.csv\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -487,10 +669,28 @@
         "    print(table[0])"
       ],
       "metadata": {
-        "id": "ff9jWWq8KeAo"
+        "id": "ff9jWWq8KeAo",
+        "outputId": "f63b1a32-4168-4ac3-cd80-1dfcb29b1c25",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ratings\n",
+            "movies\n",
+            "usuarios_sel\n",
+            "movies_sel\n",
+            "ratings_final\n",
+            "movies_final\n",
+            "full_ratings\n"
+          ]
+        }
+      ]
     }
   ]
 }
