Ajuste con full ratings

--- a/Preprocesamiento.ipynb
+++ b/Preprocesamiento.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/veronica1908/MARKETING_E2_A_III/blob/main/Preprocesamiento.ipynb",
-      "authorship_tag": "ABX9TyPDu9aeJMPTsgAUrDMuDKhs",
+      "authorship_tag": "ABX9TyO33PfKh75iZcZYU9y005hc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,14 +50,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V0o615IrEUoi",
-        "outputId": "b9d6ca0d-905f-4a71-c302-7d4d8a08445e"
+        "outputId": "0e4372a5-1b01-4ca1-84dd-80fe54c43655"
       },
-      "execution_count": 1,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "The sql extension is already loaded. To reload it, use:\n",
+            "  %reload_ext sql\n",
             "Requirement already satisfied: sqlalchemy in /usr/local/lib/python3.10/dist-packages (2.0.29)\n",
             "Requirement already satisfied: typing-extensions>=4.6.0 in /usr/local/lib/python3.10/dist-packages (from sqlalchemy) (4.10.0)\n",
             "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.10/dist-packages (from sqlalchemy) (3.0.3)\n",
@@ -77,7 +79,7 @@
       "metadata": {
         "id": "EUAoeyyoEYm5"
       },
-      "execution_count": 2,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -103,12 +105,12 @@
       ],
       "metadata": {
         "id": "H4RnSuqGghr5",
-        "outputId": "1a0392fa-22d5-4ca9-ae5b-19b3cf3cfa42",
+        "outputId": "2afaeb8c-8137-4331-f4ba-127a4ae5f1f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,8 +125,7 @@
             "Tipos de datos de las columnas en la tabla 'movies':\n",
             "movieId: INTEGER\n",
             "title: TEXT\n",
-            "genres: TEXT\n",
-            "year: INTEGER\n"
+            "genres: TEXT\n"
           ]
         }
       ]
@@ -168,7 +169,7 @@
       "metadata": {
         "id": "vLPXhC7tnNxM"
       },
-      "execution_count": 4,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -192,12 +193,12 @@
       ],
       "metadata": {
         "id": "4ZNzfQt2oamk",
-        "outputId": "a85b471a-eef0-45b2-df8f-b893a1178d4c",
+        "outputId": "d73e3f6d-b765-4c3a-c30a-36bb738cab03",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,12 +220,12 @@
       ],
       "metadata": {
         "id": "2OmaSv9F6Wwh",
-        "outputId": "a6a88055-1b7c-48c5-ecd4-90c4a616413c",
+        "outputId": "5756b684-f0af-4fe2-81c0-11c2f1e075a8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,12 +262,12 @@
       ],
       "metadata": {
         "id": "qpGhDr2ZTrdh",
-        "outputId": "31aafdde-cd2c-49b0-d398-984cf23af1f7",
+        "outputId": "90866586-94e3-46fd-ee71-ebd8017e85bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,12 +323,12 @@
       ],
       "metadata": {
         "id": "8ZkUqUGXDK7R",
-        "outputId": "c6eaeae9-7e76-4be9-ebc2-e8530dddf4d4",
+        "outputId": "3e31dad0-cc82-480a-ce17-ae9f3b7b3809",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,12 +378,12 @@
       ],
       "metadata": {
         "id": "vYY1g_MjFvN9",
-        "outputId": "67790414-e10d-4dbf-a60c-f10971c29dba",
+        "outputId": "650be676-ecaf-4490-9834-3bf45bc9a928",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,12 +431,12 @@
       ],
       "metadata": {
         "id": "77ryWF1UGbX5",
-        "outputId": "41e8f343-0e67-4b84-a6ed-18df5ffbd21b",
+        "outputId": "edbc7213-93e3-44fa-c3fd-54b0fffa2694",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,12 +489,12 @@
       ],
       "metadata": {
         "id": "fEcmfPLfjKme",
-        "outputId": "3dde9d9e-b837-4a89-902d-7de66674d224",
+        "outputId": "e72ffd92-9ec3-4e4e-aa42-00489a9f3573",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -530,7 +531,8 @@
         "CREATE TABLE full_ratings AS\n",
         "SELECT a.*,\n",
         "       c.movie_title,\n",
-        "       c.genres\n",
+        "       c.genres,\n",
+        "       c.year\n",
         "FROM ratings_final a\n",
         "INNER JOIN movies_final c ON a.movie_id = c.movie_id;\n",
         "\"\"\"\n",
@@ -546,12 +548,12 @@
       ],
       "metadata": {
         "id": "RCnWmZMa8gN7",
-        "outputId": "2c86495f-9d7b-46b7-c55f-2b6d930ca213",
+        "outputId": "e6cc0092-8097-439c-e28f-c4c22fcbdca3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -578,12 +580,12 @@
       ],
       "metadata": {
         "id": "J01ihBJ571xc",
-        "outputId": "5cec3304-f5a7-4a26-c496-19e2d95130e2",
+        "outputId": "42933750-2bad-437b-cc11-9f8f9800af35",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,12 +598,12 @@
             "3        1        47     5.0  Seven (a.k.a. Se7en) (1995)   \n",
             "4        1        50     5.0   Usual Suspects, The (1995)   \n",
             "\n",
-            "                                        genres  \n",
-            "0  Adventure|Animation|Children|Comedy|Fantasy  \n",
-            "1                               Comedy|Romance  \n",
-            "2                        Action|Crime|Thriller  \n",
-            "3                             Mystery|Thriller  \n",
-            "4                       Crime|Mystery|Thriller  \n"
+            "                                        genres  year  \n",
+            "0  Adventure|Animation|Children|Comedy|Fantasy  1995  \n",
+            "1                               Comedy|Romance  1995  \n",
+            "2                        Action|Crime|Thriller  1995  \n",
+            "3                             Mystery|Thriller  1995  \n",
+            "4                       Crime|Mystery|Thriller  1995  \n"
           ]
         }
       ]
@@ -634,12 +636,12 @@
       ],
       "metadata": {
         "id": "d-n-CdNLKRCY",
-        "outputId": "da3e6fff-9ce9-426e-c527-43fa04e5d660",
+        "outputId": "a671bde9-14d8-421e-dcd1-f8873463f81d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -670,12 +672,12 @@
       ],
       "metadata": {
         "id": "ff9jWWq8KeAo",
-        "outputId": "f63b1a32-4168-4ac3-cd80-1dfcb29b1c25",
+        "outputId": "48dd52df-6996-4e72-8640-3442912cdbb9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
