Prueba de cambios

--- a/c_modelos1.ipynb
+++ b/c_modelos1.ipynb
@@ -10020,7 +10020,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "mH55J-iwpC7O"
       },
@@ -10032,7 +10032,7 @@
         "from sklearn.preprocessing import MinMaxScaler\n",
         "from ipywidgets import interact ## para análisis interactivo\n",
         "from sklearn import neighbors ### basado en contenido un solo producto consumido\n",
-        "import joblib"
+        "import joblib #prueba colab"
       ]
     },
     {
@@ -10060,7 +10060,7 @@
         "id": "UHRtSxI-6Mvn",
         "outputId": "239ea70d-dc4d-40e2-8685-be2488d71acb"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10118,7 +10118,7 @@
         "id": "SJOIT1be7ime",
         "outputId": "4264dfc6-56ad-4382-e8b2-ba014bad0a71"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10480,7 +10480,7 @@
         "id": "J2PgNxIT8JyH",
         "outputId": "45525c70-d9c6-4dfb-e2ad-4c07f8e1bc05"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10542,7 +10542,7 @@
         "id": "iP57vb9zGX0w",
         "outputId": "0876bc8c-51e2-48c1-e2c4-2e73687a369b"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10614,7 +10614,7 @@
         "id": "zhWMUhENJxRj",
         "outputId": "7fde3dbc-a40e-4911-855b-08837837252d"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10661,7 +10661,7 @@
       "metadata": {
         "id": "TEoS00Pj6hoj"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10707,7 +10707,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10753,7 +10753,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10787,7 +10787,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10808,7 +10808,7 @@
       "metadata": {
         "id": "0nIIk0RBKgJ1"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10836,7 +10836,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10860,7 +10860,7 @@
           "height": 271
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11300,7 +11300,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11348,7 +11348,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11409,7 +11409,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11464,7 +11464,7 @@
       "metadata": {
         "id": "y41R8-ybLi1Z"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11476,7 +11476,7 @@
       "metadata": {
         "id": "RV7xQS5EN8oC"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11491,7 +11491,7 @@
       "metadata": {
         "id": "_afuNGB6OEli"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11509,7 +11509,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11564,7 +11564,7 @@
           ]
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
