--- a/c_modelos1.ipynb
+++ b/c_modelos1.ipynb
@@ -10032,7 +10032,7 @@
         "from sklearn.preprocessing import MinMaxScaler\n",
         "from ipywidgets import interact ## para análisis interactivo\n",
         "from sklearn import neighbors ### basado en contenido un solo producto consumido\n",
-        "import joblib #prueba colab"
+        "import joblib"
       ]
     },
     {
